src/snapshots/repoverlay__selection__tests__snapshot_selection_ui_search_mode.snap
---
source: src/selection.rs
assertion_line: 3582
expression: buffer_to_string(&buffer)
---
Select files to include in overlay

Categories: [1] AI (2/2) [2] DIR (0/0) [3] TC (0/0) [4] GI (0/2) [5] UT (0/1)
Search: env_
Selected: 2 AI

  [ ] .envrc
  [ ] .env.local















Type to search | Enter/Esc done | Ctrl+C clear
